--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -6,7 +6,9 @@ route: /stacked-barchart
 import StackedBarChart from '../core/StackedBarChart'
 import { Playground } from 'docz'
 
-# Chart with 2 bars stacked and a line on top 
+# Demo
+
+## Chart with 2 bars stacked and a line on top 
 <Playground>
     <StackedBarChart
         xType='time'
@@ -105,7 +107,7 @@ import { Playground } from 'docz'
     />
 </Playground>
 
-# Chart with 2 bars stacked with pareto
+## Chart with 2 bars stacked with pareto
 <Playground>
     <StackedBarChart
         sumDataValues
