chore(grid-audiometry): allow the use of grid prop inside audiometru chart, improve example

--- a/src/docz/AudiometryChart.mdx
+++ b/src/docz/AudiometryChart.mdx
@@ -12,7 +12,8 @@ import { Playground } from 'docz'
 <Playground>
     <div style={{ width: 600}}>
         <AudiometryChart
-            title='left'   
+            title='left'
+            grid={ { left: "10%" } }
             data={ [
                 { 
                     result: 60
