chore(audiometry-chart): Add symbolsSize prop at audiometry chart example

--- a/src/docz/AudiometryChart.mdx
+++ b/src/docz/AudiometryChart.mdx
@@ -13,6 +13,7 @@ import { Playground } from 'docz'
     <div style={{ width: 600}}>
         <AudiometryChart
             title='left'
+            symbolsSize={ 16 }
             grid={ { left: "10%" } }
             data={ [
                 { 
