chore(bar-charts): add title at horizontal bar chart, add titleFontSize in both single bar charts

--- a/src/docz/HorizontalBarChart.mdx
+++ b/src/docz/HorizontalBarChart.mdx
@@ -11,7 +11,10 @@ import { Playground } from 'docz'
 ## Demo
 <Playground>
     <HorizontalBarChart
+        boldTickLabel
         showTickInfos
+        marginLeftTitle="50%"
+        title="RYG graph"
         xComplement='%'
         onClickBar={ item => window.alert(item.data.value) }
         tooltip={ { 
