chore(vertical-bar-chart): allow the passing rotate label prop at vertical bar chart, fix de example title, modify the truncateLabel text, to consider the second parameter

--- a/src/docz/VerticalBarChart.mdx
+++ b/src/docz/VerticalBarChart.mdx
@@ -6,7 +6,7 @@ route: /vertical-bar-chart
 import VerticalBarChart from '../core/VerticalBarChart'
 import { Playground } from 'docz'
 
-# Stacked bar chart example
+# Vertical bar chart example
 <Playground>
     <VerticalBarChart
         showBarLabel
