chore(time-format): add h letter after time format and put the label on top

--- a/src/docz/HorizontalBarChart.mdx
+++ b/src/docz/HorizontalBarChart.mdx
@@ -15,7 +15,7 @@ import { Playground } from 'docz'
         showTickInfos
         marginLeftTitle="50%"
         title="RYG graph"
-        xComplement='%'
+        xType='time'
         onClickBar={ item => window.alert(item.data.value) }
         tooltip={ { 
             label: 'Criticidade', 
